# sam-test-app

./: .gitignore  Makefile  README.md  env-local.json  pyproject.toml  requirements-dev.txt  samconfig.toml  template.yaml
app1/: pyproject.toml
app1/app1/: __init__.py  calculator.py  stats.py
docs/: generate_diag.py
events/: event-delete-item.json  event-get-all-items.json  event-get-by-id.json  event-health.json  event-put-item.json  health.json  v2-echo.json  v2-hello.json  v2-items.json  v3-echo.json  v3-greet.json  v3-hello.json  v3-items.json
src/: app.py
src/routers/: __init__.py  v1.py
src/schemas/: __init__.py  item.py
src2/: app.py  requirements.txt
src2/routers/: __init__.py  v2.py
src3/: app.py  requirements.txt
tests/integration/: test_api.py
tests/unit/: test_app.py
