[tool.poetry]
name = "sam-test-app"
version = "0.1.0"
description = "Sample AWS SAM application — tests SAM, Docker, and AWS end-to-end"
authors = []
readme = "README.md"
packages = [
  { include = "routers", from = "src" },
  { include = "schemas", from = "src" },
]

# ------------------------------------------------------------------
# Runtime dependencies (bundled into the Lambda deployment package)
# ------------------------------------------------------------------
[tool.poetry.dependencies]
python                = "^3.12"
fastapi               = ">=0.111.0"
mangum                = ">=0.17.0"          # ASGI adapter — Lambda <-> FastAPI
aws-lambda-powertools = ">=2.40.0"          # tracer extra omitted: aws-xray-sdk not yet Python 3.13 compatible
pydantic              = ">=2.7.0"

# ------------------------------------------------------------------
# Dev dependencies (local testing only — NOT deployed to Lambda)
# ------------------------------------------------------------------
[tool.poetry.group.dev.dependencies]
pytest        = ">=8.0.0"
pytest-cov    = ">=5.0.0"
pytest-asyncio = ">=0.23.0"
httpx         = ">=0.27.0"    # required by FastAPI TestClient
uvicorn       = { version = ">=0.29.0", extras = ["standard"] }  # local dev server
requests      = ">=2.31.0"

# ------------------------------------------------------------------
# Build system
# ------------------------------------------------------------------
[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short"

# ------------------------------------------------------------------
# Coverage
# ------------------------------------------------------------------
[tool.coverage.run]
source = ["src/handlers"]
omit   = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty   = true
